# scattering_problems

./: Cargo.toml
analysis/: analysis.ipynb  caf_rb_analysis.ipynb  li2_analysis.ipynb  utility.py
examples/: li2_feshbach.rs  rotor_caf_rb_feshbach.rs
src/: alkali_atoms.rs  alkali_diatom_atom.rs  lib.rs  utility.rs
